Fix leftpanel- z-index problem in IE. Changed layout of button widget for images in combination with description.

--- a/csComp/includes/css/csStyles.scss
+++ b/csComp/includes/css/csStyles.scss
@@ -1336,15 +1336,26 @@ body,
 .button-widget-image
 {
     float:left;
-    height:25px;
+    max-height:45px;
+    max-width:45px;
     margin-top:5px;
     margin-right:5px;
+    border-radius: 4px;
+}
+
+.button-widget-image-active
+{
+    float:left;
+    max-height:25px;
+    max-width:25px;
+    margin-top:5px;
+    margin-right:25px;
+    border-radius: 4px;
 }
 
 .button-widget-description
 {
     font-size:13px;
-    clear:left;
     color: #444;
     margin-top:-2px;
 }
@@ -1380,8 +1391,7 @@ body,
     margin-top:5px;
     margin-right: 8px;
     color:black;
-        min-height: 46px;
-
+    min-height: 46px;
     }
 
 .button-container:active {
@@ -2255,6 +2265,7 @@ input[type="checkbox"] {
     display: inline-block;
 }
 .leftpanel-container {
+    z-index: 100;
     background: white;
     position: absolute;
     left:25px;
